--- a/angular-reddit/src/app/app.component.css
+++ b/angular-reddit/src/app/app.component.css
@@ -4,7 +4,7 @@ form {
     width: 300px;
     margin: 30px auto;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #b2e2f7;
   }
   
   input {
